# simple-binary-encoding

./: .gitattributes  .gitignore  CMakeLists.txt  build.gradle  gen-build-full.bat  gen-build.bat
cppbuild/: cppbuild  cppbuild.cmd
sbe-benchmarks/src/main/cpp/: SbeCarCodecBench.h  SbeMarketDataCodecBench.h
sbe-samples/src/main/cpp/: GeneratedStubExample.cpp  OtfExample.cpp
sbe-samples/src/main/java/uk/co/real_logic/sbe/examples/: ExampleTokenListener.java  OtfExample.java
sbe-tool/src/main/cpp/otf/: Encoding.h  IrDecoder.h  OtfMessageDecoder.h  Token.h
sbe-tool/src/main/java/uk/co/real_logic/sbe/: PrimitiveType.java  SbeTool.java
sbe-tool/src/main/java/uk/co/real_logic/sbe/generation/c/: CGenerator.java  CUtil.java
sbe-tool/src/main/java/uk/co/real_logic/sbe/generation/cpp/: CppGenerator.java  CppUtil.java
sbe-tool/src/main/java/uk/co/real_logic/sbe/generation/csharp/: CSharpUtil.java
sbe-tool/src/main/java/uk/co/real_logic/sbe/generation/golang/: GolangUtil.java
sbe-tool/src/main/java/uk/co/real_logic/sbe/generation/java/: JavaUtil.java
sbe-tool/src/main/java/uk/co/real_logic/sbe/ir/: Encoding.java  GenerationUtil.java  Ir.java  IrDecoder.java  IrEncoder.java  Token.java
sbe-tool/src/main/java/uk/co/real_logic/sbe/json/: JsonTokenListener.java
sbe-tool/src/main/java/uk/co/real_logic/sbe/util/: ValidationUtil.java
sbe-tool/src/main/java/uk/co/real_logic/sbe/xml/: CompositeType.java  EncodedDataType.java  EnumType.java  IrGenerator.java  SetType.java  Type.java  XmlSchemaParser.java
sbe-tool/src/main/resources/: sbe-ir.xml
sbe-tool/src/main/resources/c/templates/: CMakeLists.txt  SbecCheck.cpp  SbecCheckEmpty.c  sbec.h
sbe-tool/src/main/resources/fpl/: sbe.xsd
sbe-tool/src/test/c/: BoundsCheckTest.cpp  CComplianceTest.c  CodeGenTest.cpp  GroupWithDataTest.cpp
sbe-tool/src/test/cpp/: BoundsCheckTest.cpp  CodeGenTest.cpp  CompositeElementsTest.cpp  CompositeOffsetsCodeGenTest.cpp  CompositeOffsetsIrTest.cpp  GroupWithDataTest.cpp  MessageBlockLengthTest.cpp  Rc3OtfFullIrTest.cpp
sbe-tool/src/test/java/uk/co/real_logic/sbe/generation/csharp/: Issue567GroupSizeTest.java
sbe-tool/src/test/java/uk/co/real_logic/sbe/ir/: BasicXmlIrGenerationTest.java  CompositeElementsIrTest.java  EncodedIrTest.java
sbe-tool/src/test/java/uk/co/real_logic/sbe/xml/: CyclicReferencesTest.java  ErrorHandlerTest.java  SetTypeTest.java
sbe-tool/src/test/resources/: composite-elements-schema-array.xml  composite-elements-schema-nested-type.xml  composite-elements-schema-rc4.xml  error-handler-types-dup-type-by-name.xml  error-handler-types-dup-type-composite.xml  error-handler-types-dup-type-enum.xml  error-handler-types-dup-type-set.xml  group-with-data-schema.xml  issue567-invalid.xml  issue567-valid.xml  message-block-length-test.xml
